2012-03-03  Murray Cumming  <murrayc@murrayc.com>

	Application: Simplify the window handling slightly.

	* gtk/src/application.[hg|ccg]: run(): Show the window immediately
	instead of doing it in a signal handler, because that bug has been
	fixed in GTK+.

2012-03-02  Murray Cumming  <murrayc@murrayc.com>

	Deprecate Gtk::Main in favor of Gtk::Application.

	* gtk/src/main.[hg|ccg]: Deprecate most of this API.
	* demos/gtk-demo/example_change_display.cc:
	* demos/gtk-demo/main.cc: Use Gtk::Application instead of Gtk::Main.

2012-03-02  Murray Cumming  <murrayc@murrayc.com>

	ColorSelection*: Document these as deprecated.

	* gtk/src/colorselection.hg: Add @deprecated doxygen tags.

2012-03-02  Murray Cumming  <murrayc@murrayc.com>

	FontChooserDialog: Remove default signal handler to prevent ABI break.

	* gtk/src/fontchooser.hg: Use the no_default_handler option because
	the signal was not actually in the gtkmm 3.2 API, because we did not
	generate the .defs for it.

2012-03-02  Murray Cumming  <murrayc@murrayc.com>

	Add property and signal defs for GtkFontChooser*.

	* tools/extra_defs_gen/generate_defs_gtk.cc: Add GTK_FONT_CHOOSER,
	GTK_FONT_CHOOSER_DIALOG and GTK_FONT_CHOOSER_WIDGET.
	* gtk/src/gtk_signals.defs: Update.

2012-03-02  Murray Cumming  <murrayc@murrayc.com>

	Add ColorChooser and ColorChooserDialog, deprecating ColorSelection*.

	* tools/extra_defs_gen/generate_defs_gtk.cc: Mention the new Color* 
	types.
	* gtk/src/gtk_signals.def
	* gtk/src/gtk_methods.defs: Update.

	* gtk/src/filelist.am:
	* gtk/src/colorchooser.[hg|ccg]: Add the ColorChooser interface.
	* gtk/src/colorchooserdialog.[hg|ccg]: Add ColorChooserDialog.
	* gtk/src/colorbutton.hg: Add a comment that we cannot derive this from
	the new interface, though the C API does that, because we cannot break
	ABI.
	* gtk/src/colorselection.hg: Deprecate ColorSelection and 
	ColorSelectionDialog, as in the C API.
	* gtk/gtkmm.h: Mention the new headers.