@@ -20,10 +20,10 @@ MyWindow::MyWindow() :
 
 int main (int argc, char *argv[])
 {
-  Gtk::Main kit(argc, argv);
+  Glib::RefPtr<Gtk::Application> app =
+    Gtk::Application::create(argc, argv,
+      "org.gtkmm.test");
 
   MyWindow window;
-  kit.run(window);
-
-  return 0;
+  return app->run(window);
 }
