@@ -19,7 +19,9 @@ void on_property_name_changed()
 
 int main (int argc, char **argv)
 {
-  Gtk::Main kit (argc, argv);
+  Glib::RefPtr<Gtk::Application> app =
+    Gtk::Application::create(argc, argv,
+      "org.gtkmm.test");
 
   Gtk::Window window;
 
@@ -35,5 +37,5 @@ int main (int argc, char **argv)
 
   window.add(button);
 
-  Gtk::Main::run(window);
+  return app->run(window);
 }
