@@ -1,5 +1,11 @@
 2012-03-03  Murray Cumming  <murrayc@murrayc.com>
 
+	Tests: Use Gtk::Application instead of Gtk::Main.
+
+	* tests/: Use Gtk::Application because we have deprecated Gtk::Main.
+
+2012-03-03  Murray Cumming  <murrayc@murrayc.com>
+
 	Application: Simplify the window handling slightly.
 
 	* gtk/src/application.[hg|ccg]: run(): Show the window immediately
